fsi/envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 9999
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: http1
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/raft/"
                route:
                  cluster: raft-services 
              - match:
                  prefix: "/"
                route:
                  cluster: file-text-services
              
          http_filters:
          - name: envoy.router
            typed_config: {}
            
  clusters:
  - name: raft-services
    connect_timeout: 1.00s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: raft-services
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: service1.container.shipyard.run
                port_value: 9501
                ipv4_compat: true
  - name: file-text-services
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: file-text-services
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: service1.container.shipyard.run
                port_value: 7500
                ipv4_compat: true
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
